--- a/06. RandomForest.ipynb
+++ b/06. RandomForest.ipynb
@@ -10,22 +10,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "O8NoTzxjs2wK",
         "outputId": "fa4bc249-a4fa-48a6-9dc6-7733646ed223"
       },
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "    \n",
+        "# Load data\n",
+        "melbourne_file_path = 'data/melb_data.csv'\n",
+        "melbourne_data = pd.read_csv(melbourne_file_path) \n",
+        "# Filter rows with missing values\n",
+        "melbourne_data = melbourne_data.dropna(axis=0)\n",
+        "# Choose target and features\n",
+        "y = melbourne_data.Price\n",
+        "melbourne_features = ['Rooms', 'Bathroom', 'Landsize', 'BuildingArea', \n",
+        "                        'YearBuilt', 'Lattitude', 'Longtitude']\n",
+        "X = melbourne_data[melbourne_features]\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# split data into training and validation data, for both features and target\n",
+        "# The split is based on a random number generator. Supplying a numeric value to\n",
+        "# the random_state argument guarantees we get the same split every time we\n",
+        "# run this script.\n",
+        "train_X, val_X, train_y, val_y = train_test_split(X, y,random_state = 0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Hello World!\n"
+            "191669.7536453626\n"
           ]
         }
       ],
       "source": [
-        "print(\"Hello World!\")"
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "\n",
+        "forest_model = RandomForestRegressor(random_state=1)\n",
+        "forest_model.fit(train_X, train_y)\n",
+        "melb_preds = forest_model.predict(val_X)\n",
+        "print(mean_absolute_error(val_y, melb_preds))"
       ]
     }
   ],
@@ -49,7 +83,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.7"
+      "version": "3.10.13"
     },
     "orig_nbformat": 4,
     "vscode": {
